<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit_clear"
        android:orderInCategory="1"
        android:title="@string/action_short_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_delete"
        android:orderInCategory="2"
        android:title="@string/action_short_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_done"
        android:orderInCategory="3"
        android:title="@string/action_short_done"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_select"
        android:orderInCategory="4"
        android:title="@string/action_short_all"
        android:checkable="true"
        app:showAsAction="always" />

</menu>