<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.luismedinaweb.whatsthat.UI.MainView.MainActivity">
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="1"
        android:title="@string/action_camera"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="2"
        android:title="@string/action_clear_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_files"
        android:orderInCategory="3"
        android:title="@string/action_delete_files"
        app:showAsAction="never" />
    <!--<item-->
    <!--android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_settings"-->
    <!--app:showAsAction="never" />-->
</menu>
